style(v2): add 60px space above first purple card (.partner-card)

--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -487,6 +487,7 @@ input:focus,
     width: 100%;
     aspect-ratio: 1110 / 600;
     overflow: hidden;
+    margin-top: 60px; /* extra space above first purple card */
 }
 
 .partner-image {
